[package]
name = "dispatch-proxy"
version = "0.1.1-alpha.0"
authors = ["Alexandre Kirszenberg <alex@kirszenberg.com>"]
edition = "2018"
description = "A SOCKS proxy that balances traffic between network interfaces."
license = "MIT OR Apache-2.0"
keywords = ["SOCKS", "proxy", "dispatch", "network", "interface"]
repository = "https://github.com/alexkirsz/dispatch"

[[bin]]
path = "src/main.rs"
name = "dispatch"

[profile.release]
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
socksv5 = { version = "0.3.0", features = ["tokio"], default-features = false }
tracing = "0.1.26"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.19"
tracing-error = "0.1.2"
tracing-appender = "0.1.2"
eyre = "0.6.5"
color-eyre = { version = "0.5.11", features = ["issue-url"] }
tokio = { version = "1.8", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "io-util"
] }
structopt = "0.3.21"
pnet_datalink = "0.28.0"
owo-colors = "2.0.0"
tokio-util = "0.6.7"
async-trait = "0.1.50"
directories = "3.0.2"
percent-encoding = "2.1.0"
term-table = "1.3.1"
sysinfo = "0.19.2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.6"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@alexkirsz"
