[package]
name = "dispatch-proxy"
version = "0.1.2"
authors = ["Alexandre Kirszenberg <alex@kirszenberg.com>"]
edition = "2018"
description = "A SOCKS proxy that balances traffic between network interfaces."
license = "MIT OR Apache-2.0"
keywords = ["SOCKS", "proxy", "dispatch", "network", "interface"]
repository = "https://github.com/alexkirsz/dispatch"

[[bin]]
path = "src/main.rs"
name = "dispatch"

[profile.release]
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
socksv5 = { version = "0.3.1", features = ["tokio"], default-features = false }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.17"
tracing-error = "0.2.0"
tracing-appender = "0.2.2"
eyre = "0.6.8"
color-eyre = { version = "0.6.2", features = ["issue-url"] }
tokio = { version = "1.28.0", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "io-util",
] }
structopt = "0.3.26"
network-interface = "1.0.0"
owo-colors = "3.5.0"
tokio-util = "0.7.8"
async-trait = "0.1.68"
directories = "5.0.1"
percent-encoding = "2.2.0"
term-table = "1.3.2"
sysinfo = "0.29.0"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.6"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.69.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@alexkirsz"
