[package]
name = "dispatch-proxy"
version = "0.2.0"
authors = ["Alexandre Kirszenberg <alex@kirszenberg.com>"]
edition = "2021"
description = "A SOCKS proxy that balances traffic between network interfaces."
license = "MIT OR Apache-2.0"
keywords = ["SOCKS", "proxy", "dispatch", "network", "interface"]
repository = "https://github.com/alexkirsz/dispatch"

[[bin]]
path = "src/main.rs"
name = "dispatch"

[profile.release]
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
socksv5 = { version = "0.3", features = ["tokio"], default-features = false }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
tracing-error = "0.2"
tracing-appender = "0.2"
eyre = "0.6"
color-eyre = { version = "0.6", features = ["issue-url"] }
tokio = { version = "1", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "io-util",
] }
clap = { version = "4", features = ["derive"] }
network-interface = "1"
owo-colors = "4"
tokio-util = "0.7"
async-trait = "0.1"
directories = "5"
percent-encoding = "2"
term-table = "1"
sysinfo = "0.30"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.6"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.77.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@alexkirsz"
